--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "schwarz-gruen",
     "displayName": "Schwarz Gruen",
     "description": "This is a theme with heavily with black and green colors.",
-    "publisher": "Kerem Zopcuk",
+    "publisher": "Kerem",
     "icon": "icons/icon.png",
     "version": "0.0.1",
     "engines": {
@@ -11,6 +11,16 @@
     "categories": [
         "Themes"
     ],
+    "author": {
+        "name": "Kerem Zopcuk",
+        "url": "https://github.com/m0xai",
+        "email": "keremzopcuk@gmail.com"
+    },
+    "repository": {
+        "url": "https://github.com/m0xai/Schwarz-Gruen.git",
+        "type": "git"
+    },
+    
     "contributes": {
         "themes": [
             {
